[project]
name = "pypiezosystemsjena"
version = "0.1.0"
description = "Python wrapper for Piezosystems Jena NV200D/Net controllers"
authors = [
    {name = "Peter Thomas Barrow", email = "peter.barrow.93@gmail.com"}
]
readme = "README.md"
dependencies = ["serial", "telnetlib"]
license = {file = "LICENSE"}

[project.urls]
Repository = "https://github.com/Free-Space-QKD-Lab-HWU/pypiezosystemsjena.git"
Issues = "https://github.com/Free-Space-QKD-Lab-HWU/pypiezosystemsjena/issues"

[build-system]
requires = ["wheel", "mkdocs", "mkdocs-material", "mkdocstrings"]
build-backend = "setuptools.build_meta"
